Vampires bite no longer is 1 use only

--- a/mafia/index.html
+++ b/mafia/index.html
@@ -1325,6 +1325,8 @@
               });
             }
           }
+        }else{
+          vampsCanAttack = true;
         }
         //rb stuff
         for(let i in dayInfo){
